--- a/src/app/user/user-list/user-list.component.html
+++ b/src/app/user/user-list/user-list.component.html
@@ -6,17 +6,26 @@
 
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> ID </th>
-            <td mat-cell *matCellDef="let element">{{element.id}}</td>
+            <td mat-cell *matCellDef="let element">{{element.user_id}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="update">
+            <th mat-header-cell *matHeaderCellDef style="text-align:center"> 編集 </th>
+            <td mat-cell *matCellDef="let element" style="text-align:center">
+              <button mat-icon-button color="primary" (click)="updateData(element)">
+                <mat-icon>edit_note</mat-icon>
+              </button>
+            </td>
         </ng-container>
 
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef> 名称 </th>
-            <td mat-cell *matCellDef="let element">{{element.name}}</td>
+            <td mat-cell *matCellDef="let element">{{element.user_name}}</td>
         </ng-container>
 
         <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef> E-mail </th>
-            <td mat-cell *matCellDef="let element">{{element.email}}</td>
+            <td mat-cell *matCellDef="let element">{{element.user_email}}</td>
         </ng-container>
 
         <!-- ↓これがないとリストでなかった -->
