--- a/src/app/user/user-edit/user-edit.component.html
+++ b/src/app/user/user-edit/user-edit.component.html
@@ -1,1 +1,34 @@
-<h1>USER_EDIT({{user.user_name}})</h1>
+
+<div mat-dialog-content [formGroup]="form">
+    <mat-toolbar>
+        <span>USER_EDIT()</span>
+    </mat-toolbar>
+    <div fxLayout="column" fxFlexFill fxLayoutAlign="start stretch">
+
+        <mat-form-field floatLabel="always">
+            <mat-label>ID</mat-label>
+            <input matInput placeholder="ID" formControlName="user_id" required>
+            <mat-error *ngIf="user_id.hasError('required')">必須</mat-error>
+        </mat-form-field>
+
+        <div fxLayout="row" fxFlexFill fxLayoutAlign="start stretch" fxLayout.lt-sm="column">
+            <div fxFlex>
+                <div fxLayout="column" fxFlexFill fxLayoutAlign="start stretch">
+                    <mat-form-field floatLabel="always">
+                        <mat-label>名称</mat-label>
+                            <input matInput placeholder="名称" formControlName="user_name" required>
+                        <mat-error *ngIf="user_name.hasError('required')">必須</mat-error>
+                    </mat-form-field>
+                </div>
+            </div>
+            <div fxFlex="10px" fxHide.lt-sm="true"></div>
+        </div>
+
+        <mat-form-field floatLabel="always">
+            <mat-label>E-mail</mat-label>
+            <textarea matInput placeholder="E-mail" formControlName="user_email"></textarea>
+        </mat-form-field>
+
+    </div>
+    <button (click)="closeDialog()">閉じる</button>
+</div>
