--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <style>
-  :host {
+  /* :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
     color: #333;
@@ -28,7 +28,7 @@
 
   p {
     margin: 0;
-  }
+  } */
 
   /* .spacer {
     flex: 1;
@@ -66,7 +66,7 @@
     opacity: 0.8;
   } */
 
-  .content {
+  /* .content {
     display: flex;
     margin: 82px auto 32px;
     padding: 0 16px;
@@ -270,10 +270,10 @@
     left: -230px;
     z-index: -10;
     width: 1920px;
-  }
+  } */
 
   /* Responsive Styles */
-  @media screen and (max-width: 767px) {
+  /* @media screen and (max-width: 767px) {
     .card-container > *:not(.circle-link) ,
     .terminal {
       width: 100%;
@@ -299,7 +299,7 @@
       display: none;
       visibility: hidden;
     }
-  }
+  } */
 </style>
 
 <!-- Toolbar -->
